-- =============================================================================
-- ITI0207 e-pood — Ü2 draft: PostgreSQL base tables
-- Teema: Nutitelefonide e-poe infosüsteemi kaupade funktsionaalne allsüsteem
-- Route: DBeaver / no-EA (Ü2 path 3)
--
-- DRAFT ONLY — not applied to school server (apex2) yet.
-- Ü2 scope: CREATE TABLE (+ sequences via GENERATED/IDENTITY), PK, UK, FK,
--           defaults, nullability. NO CHECK. NO CREATE INDEX.
-- CHECKs and indexes → Ü3. Server DDL apply → Ü4.
-- =============================================================================

-- ---------------------------------------------------------------------------
-- Klassifikaatorite register
-- ---------------------------------------------------------------------------

CREATE TABLE riik (
    riik_id             smallint GENERATED BY DEFAULT AS IDENTITY,
    kood                char(3)       NOT NULL,
    nimetus             varchar(100)  NOT NULL,
    on_aktiivne         boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_riik PRIMARY KEY (riik_id),
    CONSTRAINT uk_riik_kood UNIQUE (kood),
    CONSTRAINT uk_riik_nimetus UNIQUE (nimetus)
);

CREATE TABLE isiku_seisundi_liik (
    isiku_seisundi_liik_id  smallint GENERATED BY DEFAULT AS IDENTITY,
    kood                    varchar(10)   NOT NULL,
    nimetus                 varchar(100)  NOT NULL,
    on_aktiivne             boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_isiku_seisundi_liik PRIMARY KEY (isiku_seisundi_liik_id),
    CONSTRAINT uk_isiku_seisundi_liik_kood UNIQUE (kood),
    CONSTRAINT uk_isiku_seisundi_liik_nimetus UNIQUE (nimetus)
);

CREATE TABLE tootaja_seisundi_liik (
    tootaja_seisundi_liik_id  smallint GENERATED BY DEFAULT AS IDENTITY,
    kood                      varchar(10)   NOT NULL,
    nimetus                   varchar(100)  NOT NULL,
    on_aktiivne               boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_tootaja_seisundi_liik PRIMARY KEY (tootaja_seisundi_liik_id),
    CONSTRAINT uk_tootaja_seisundi_liik_kood UNIQUE (kood),
    CONSTRAINT uk_tootaja_seisundi_liik_nimetus UNIQUE (nimetus)
);

CREATE TABLE kliendi_seisundi_liik (
    kliendi_seisundi_liik_id  smallint GENERATED BY DEFAULT AS IDENTITY,
    kood                      varchar(10)   NOT NULL,
    nimetus                   varchar(100)  NOT NULL,
    on_aktiivne               boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_kliendi_seisundi_liik PRIMARY KEY (kliendi_seisundi_liik_id),
    CONSTRAINT uk_kliendi_seisundi_liik_kood UNIQUE (kood),
    CONSTRAINT uk_kliendi_seisundi_liik_nimetus UNIQUE (nimetus)
);

CREATE TABLE tootaja_roll (
    tootaja_roll_id   smallint GENERATED BY DEFAULT AS IDENTITY,
    kood              varchar(30)   NOT NULL,
    nimetus           varchar(100)  NOT NULL,
    kirjeldus         text,
    on_aktiivne       boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_tootaja_roll PRIMARY KEY (tootaja_roll_id),
    CONSTRAINT uk_tootaja_roll_kood UNIQUE (kood),
    CONSTRAINT uk_tootaja_roll_nimetus UNIQUE (nimetus)
);

CREATE TABLE kauba_seisundi_liik (
    kauba_seisundi_liik_id  smallint GENERATED BY DEFAULT AS IDENTITY,
    kood                    smallint      NOT NULL,
    nimetus                 varchar(100)  NOT NULL,
    on_aktiivne             boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_kauba_seisundi_liik PRIMARY KEY (kauba_seisundi_liik_id),
    CONSTRAINT uk_kauba_seisundi_liik_kood UNIQUE (kood),
    CONSTRAINT uk_kauba_seisundi_liik_nimetus UNIQUE (nimetus)
);
-- Expected seed codes (data later): 1 Ootel, 2 Aktiivne, 3 Mitteaktiivne, 4 Lopetatud

CREATE TABLE brand (
    brand_id      smallint GENERATED BY DEFAULT AS IDENTITY,
    kood          varchar(30)   NOT NULL,
    nimetus       varchar(100)  NOT NULL,
    on_aktiivne   boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_brand PRIMARY KEY (brand_id),
    CONSTRAINT uk_brand_kood UNIQUE (kood),
    CONSTRAINT uk_brand_nimetus UNIQUE (nimetus)
);

CREATE TABLE diagonaal (
    diagonaal_id  smallint GENERATED BY DEFAULT AS IDENTITY,
    kood          numeric(4,1)  NOT NULL,
    nimetus       varchar(100)  NOT NULL,
    on_aktiivne   boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_diagonaal PRIMARY KEY (diagonaal_id),
    CONSTRAINT uk_diagonaal_kood UNIQUE (kood),
    CONSTRAINT uk_diagonaal_nimetus UNIQUE (nimetus)
);

CREATE TABLE ekraani_resolutsioon (
    ekraani_resolutsioon_id  smallint GENERATED BY DEFAULT AS IDENTITY,
    kood                     varchar(30)   NOT NULL,
    nimetus                  varchar(100)  NOT NULL,
    horisontaalne            integer       NOT NULL,
    vertikaalne              integer       NOT NULL,
    on_aktiivne              boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_ekraani_resolutsioon PRIMARY KEY (ekraani_resolutsioon_id),
    CONSTRAINT uk_ekraani_resolutsioon_kood UNIQUE (kood),
    CONSTRAINT uk_ekraani_resolutsioon_nimetus UNIQUE (nimetus),
    CONSTRAINT uk_ekraani_resolutsioon_horis_vert UNIQUE (horisontaalne, vertikaalne)
);

CREATE TABLE kaamera (
    kaamera_id    smallint GENERATED BY DEFAULT AS IDENTITY,
    kood          numeric(6,1)  NOT NULL,
    nimetus       varchar(100)  NOT NULL,
    on_aktiivne   boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_kaamera PRIMARY KEY (kaamera_id),
    CONSTRAINT uk_kaamera_kood UNIQUE (kood),
    CONSTRAINT uk_kaamera_nimetus UNIQUE (nimetus)
);

CREATE TABLE protsessor (
    protsessor_id  smallint GENERATED BY DEFAULT AS IDENTITY,
    kood           varchar(30)   NOT NULL,
    nimetus        varchar(100)  NOT NULL,
    on_aktiivne    boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_protsessor PRIMARY KEY (protsessor_id),
    CONSTRAINT uk_protsessor_kood UNIQUE (kood),
    CONSTRAINT uk_protsessor_nimetus UNIQUE (nimetus)
);

CREATE TABLE sisemalu (
    sisemalu_id   smallint GENERATED BY DEFAULT AS IDENTITY,
    kood          integer       NOT NULL,
    nimetus       varchar(100)  NOT NULL,
    on_aktiivne   boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_sisemalu PRIMARY KEY (sisemalu_id),
    CONSTRAINT uk_sisemalu_kood UNIQUE (kood),
    CONSTRAINT uk_sisemalu_nimetus UNIQUE (nimetus)
);

CREATE TABLE varv (
    varv_id       smallint GENERATED BY DEFAULT AS IDENTITY,
    kood          varchar(30)   NOT NULL,
    nimetus       varchar(100)  NOT NULL,
    on_aktiivne   boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_varv PRIMARY KEY (varv_id),
    CONSTRAINT uk_varv_kood UNIQUE (kood),
    CONSTRAINT uk_varv_nimetus UNIQUE (nimetus)
);

CREATE TABLE kauba_kategooria_tyyp (
    kauba_kategooria_tyyp_id  smallint GENERATED BY DEFAULT AS IDENTITY,
    kood                      varchar(30)   NOT NULL,
    nimetus                   varchar(100)  NOT NULL,
    on_aktiivne               boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_kauba_kategooria_tyyp PRIMARY KEY (kauba_kategooria_tyyp_id),
    CONSTRAINT uk_kauba_kategooria_tyyp_kood UNIQUE (kood),
    CONSTRAINT uk_kauba_kategooria_tyyp_nimetus UNIQUE (nimetus)
);

CREATE TABLE kauba_kategooria (
    kauba_kategooria_id       smallint GENERATED BY DEFAULT AS IDENTITY,
    kood                      varchar(30)   NOT NULL,
    nimetus                   varchar(100)  NOT NULL,
    kauba_kategooria_tyyp_id  smallint      NOT NULL,
    on_aktiivne               boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_kauba_kategooria PRIMARY KEY (kauba_kategooria_id),
    CONSTRAINT uk_kauba_kategooria_kood UNIQUE (kood),
    CONSTRAINT uk_kauba_kategooria_tyyp_nimetus UNIQUE (kauba_kategooria_tyyp_id, nimetus),
    CONSTRAINT fk_kauba_kategooria_tyyp FOREIGN KEY (kauba_kategooria_tyyp_id)
        REFERENCES kauba_kategooria_tyyp (kauba_kategooria_tyyp_id)
);

-- ---------------------------------------------------------------------------
-- Isikute register
-- ---------------------------------------------------------------------------

CREATE TABLE isik (
    isik_id                  integer GENERATED BY DEFAULT AS IDENTITY,
    isikukood                varchar(50)   NOT NULL,
    e_meil                   varchar(254)  NOT NULL,
    riik_id                  smallint      NOT NULL,
    isiku_seisundi_liik_id   smallint      NOT NULL,
    synni_kp                 date          NOT NULL,
    reg_aeg                  timestamptz   NOT NULL DEFAULT CURRENT_TIMESTAMP,
    viimase_muutm_aeg        timestamptz   NOT NULL DEFAULT CURRENT_TIMESTAMP,
    eesnimi                  varchar(50),
    perenimi                 varchar(50),
    elukoht                  varchar(500),
    CONSTRAINT pk_isik PRIMARY KEY (isik_id),
    CONSTRAINT uk_isik_e_meil UNIQUE (e_meil),
    CONSTRAINT uk_isik_riik_isikukood UNIQUE (riik_id, isikukood),
    CONSTRAINT fk_isik_riik FOREIGN KEY (riik_id)
        REFERENCES riik (riik_id),
    CONSTRAINT fk_isik_isiku_seisundi_liik FOREIGN KEY (isiku_seisundi_liik_id)
        REFERENCES isiku_seisundi_liik (isiku_seisundi_liik_id)
);

CREATE TABLE kasutajakonto (
    isik_id       integer       NOT NULL,
    parool        varchar(60)   NOT NULL,
    on_aktiivne   boolean       NOT NULL DEFAULT TRUE,
    CONSTRAINT pk_kasutajakonto PRIMARY KEY (isik_id),
    CONSTRAINT fk_kasutajakonto_isik FOREIGN KEY (isik_id)
        REFERENCES isik (isik_id)
);
-- parool: bcrypt/crypt hash (PostgreSQL path per Erki Ü2 §3.6); no separate sool column

-- ---------------------------------------------------------------------------
-- Tootajate register
-- ---------------------------------------------------------------------------

CREATE TABLE tootaja (
    tootaja_id                 integer GENERATED BY DEFAULT AS IDENTITY,
    isik_id                    integer       NOT NULL,
    tootaja_seisundi_liik_id   smallint      NOT NULL,
    CONSTRAINT pk_tootaja PRIMARY KEY (tootaja_id),
    CONSTRAINT uk_tootaja_isik UNIQUE (isik_id),
    CONSTRAINT fk_tootaja_isik FOREIGN KEY (isik_id)
        REFERENCES isik (isik_id),
    CONSTRAINT fk_tootaja_tootaja_seisundi_liik FOREIGN KEY (tootaja_seisundi_liik_id)
        REFERENCES tootaja_seisundi_liik (tootaja_seisundi_liik_id)
);

CREATE TABLE tootaja_rolli_omamine (
    tootaja_rolli_omamine_id  integer GENERATED BY DEFAULT AS IDENTITY,
    tootaja_id                integer       NOT NULL,
    tootaja_roll_id           smallint      NOT NULL,
    alguse_aeg                timestamptz   NOT NULL,
    lopu_aeg                  timestamptz,
    CONSTRAINT pk_tootaja_rolli_omamine PRIMARY KEY (tootaja_rolli_omamine_id),
    CONSTRAINT uk_tootaja_rolli_omamine_algus UNIQUE (tootaja_id, tootaja_roll_id, alguse_aeg),
    CONSTRAINT fk_tootaja_rolli_omamine_tootaja FOREIGN KEY (tootaja_id)
        REFERENCES tootaja (tootaja_id),
    CONSTRAINT fk_tootaja_rolli_omamine_roll FOREIGN KEY (tootaja_roll_id)
        REFERENCES tootaja_roll (tootaja_roll_id)
);

-- ---------------------------------------------------------------------------
-- Klientide register (auth / UC1; not order/sales subsystem)
-- ---------------------------------------------------------------------------

CREATE TABLE klient (
    isik_id                   integer       NOT NULL,
    kliendi_seisundi_liik_id  smallint      NOT NULL,
    on_nous_tylitamisega      boolean       NOT NULL DEFAULT FALSE,
    CONSTRAINT pk_klient PRIMARY KEY (isik_id),
    CONSTRAINT fk_klient_isik FOREIGN KEY (isik_id)
        REFERENCES isik (isik_id),
    CONSTRAINT fk_klient_kliendi_seisundi_liik FOREIGN KEY (kliendi_seisundi_liik_id)
        REFERENCES kliendi_seisundi_liik (kliendi_seisundi_liik_id)
);

-- ---------------------------------------------------------------------------
-- Kaupade register
-- ---------------------------------------------------------------------------

CREATE TABLE kaup (
    kaup_id                   integer GENERATED BY DEFAULT AS IDENTITY,
    kauba_kood                varchar(50)     NOT NULL,
    nimetus                   varchar(255)    NOT NULL,
    kauba_seisundi_liik_id    smallint        NOT NULL,
    brand_id                  smallint        NOT NULL,
    registreerija_id          integer         NOT NULL,
    viimase_muutja_id         integer         NOT NULL,
    hind                      numeric(12,2)   NOT NULL,
    kirjeldus                 text            NOT NULL,
    reg_aeg                   timestamptz     NOT NULL DEFAULT CURRENT_TIMESTAMP,
    viimase_muutm_aeg         timestamptz     NOT NULL DEFAULT CURRENT_TIMESTAMP,
    pildi_aadress             varchar(500),
    CONSTRAINT pk_kaup PRIMARY KEY (kaup_id),
    CONSTRAINT uk_kaup_kauba_kood UNIQUE (kauba_kood),
    CONSTRAINT fk_kaup_kauba_seisundi_liik FOREIGN KEY (kauba_seisundi_liik_id)
        REFERENCES kauba_seisundi_liik (kauba_seisundi_liik_id),
    CONSTRAINT fk_kaup_brand FOREIGN KEY (brand_id)
        REFERENCES brand (brand_id),
    CONSTRAINT fk_kaup_registreerija FOREIGN KEY (registreerija_id)
        REFERENCES tootaja (tootaja_id),
    CONSTRAINT fk_kaup_viimase_muutja FOREIGN KEY (viimase_muutja_id)
        REFERENCES tootaja (tootaja_id)
);
-- Note: partial unique on nimetus for non-Lopetatud states → Ü3 (CHECK / partial UK / index)

CREATE TABLE nutitelefon (
    kaup_id                    integer       NOT NULL,
    eesmine_kaamera_id         smallint      NOT NULL,
    tagumine_kaamera_id        smallint      NOT NULL,
    sisemalu_id                smallint      NOT NULL,
    diagonaal_id               smallint      NOT NULL,
    protsessor_id              smallint      NOT NULL,
    ekraani_resolutsioon_id    smallint      NOT NULL,
    on_sormejalelugeja         boolean       NOT NULL DEFAULT FALSE,
    on_veekindel               boolean       NOT NULL DEFAULT FALSE,
    CONSTRAINT pk_nutitelefon PRIMARY KEY (kaup_id),
    CONSTRAINT fk_nutitelefon_kaup FOREIGN KEY (kaup_id)
        REFERENCES kaup (kaup_id) ON DELETE CASCADE,
    CONSTRAINT fk_nutitelefon_eesmine_kaamera FOREIGN KEY (eesmine_kaamera_id)
        REFERENCES kaamera (kaamera_id),
    CONSTRAINT fk_nutitelefon_tagumine_kaamera FOREIGN KEY (tagumine_kaamera_id)
        REFERENCES kaamera (kaamera_id),
    CONSTRAINT fk_nutitelefon_sisemalu FOREIGN KEY (sisemalu_id)
        REFERENCES sisemalu (sisemalu_id),
    CONSTRAINT fk_nutitelefon_diagonaal FOREIGN KEY (diagonaal_id)
        REFERENCES diagonaal (diagonaal_id),
    CONSTRAINT fk_nutitelefon_protsessor FOREIGN KEY (protsessor_id)
        REFERENCES protsessor (protsessor_id),
    CONSTRAINT fk_nutitelefon_ekraani_resolutsioon FOREIGN KEY (ekraani_resolutsioon_id)
        REFERENCES ekraani_resolutsioon (ekraani_resolutsioon_id)
);

CREATE TABLE kauba_variant (
    kauba_variant_id  integer GENERATED BY DEFAULT AS IDENTITY,
    kaup_id           integer       NOT NULL,
    varv_id           smallint      NOT NULL,
    CONSTRAINT pk_kauba_variant PRIMARY KEY (kauba_variant_id),
    CONSTRAINT uk_kauba_variant_kaup_varv UNIQUE (kaup_id, varv_id),
    CONSTRAINT fk_kauba_variant_kaup FOREIGN KEY (kaup_id)
        REFERENCES kaup (kaup_id) ON DELETE CASCADE,
    CONSTRAINT fk_kauba_variant_varv FOREIGN KEY (varv_id)
        REFERENCES varv (varv_id)
);

CREATE TABLE kauba_kategooria_omamine (
    kaup_id              integer   NOT NULL,
    kauba_kategooria_id  smallint  NOT NULL,
    CONSTRAINT pk_kauba_kategooria_omamine PRIMARY KEY (kaup_id, kauba_kategooria_id),
    CONSTRAINT fk_kauba_kategooria_omamine_kaup FOREIGN KEY (kaup_id)
        REFERENCES kaup (kaup_id) ON DELETE CASCADE,
    CONSTRAINT fk_kauba_kategooria_omamine_kategooria FOREIGN KEY (kauba_kategooria_id)
        REFERENCES kauba_kategooria (kauba_kategooria_id)
);

-- =============================================================================
-- End of Ü2 draft. Deferred to Ü3: CHECK constraints, indexes (incl. FK indexes
-- and case-insensitive unique on isik.e_meil). Do not run on apex2 until Ü4.
-- =============================================================================
