erDiagram
    ISIK ||--|| KASUTAJAKONTO : "omab sisselogimiseks"
    ISIK ||--o| TOOTAJA : "võib olla"
    ISIK ||--o| KLIENT : "võib olla"
    TOOTAJA ||--o| TREENER : "tegutseb treeneri rollis"
    TOOTAJA ||--o{ TOOTAJA_ROLLI_OMAMINE : "omab rolle"
    ROLL ||--o{ TOOTAJA_ROLLI_OMAMINE : "liigitab rolli"
    KLASSIFIKAATOR ||--o{ ROLL : "täpsustab rolli väärtusi"
    KLASSIFIKAATOR ||--o{ SEISUND : "täpsustab seisundi väärtusi"
    SEISUND ||--o{ ISIK : "kirjeldab isiku seisu"
    SEISUND ||--o{ TOOTAJA : "kirjeldab töötaja seisu"

    ISIK {
        tunnus e_meil
        tunnus isikukood
        nimetus eesnimi
        nimetus perenimi
        kirjeldus elukoht
        seisund isiku_seisund
    }
    KASUTAJAKONTO {
        tunnus e_meil
        tunnus aktiivsus
    }
    TOOTAJA {
        tunnus tootaja_tunnus
        seisund tootaja_seisund
    }
    TREENER {
        tunnus treeneri_tunnus
        aeg rolli_kehtivus
        kirjeldus padevuste_ulatus
    }
    KLIENT {
        tunnus kliendi_tunnus
        aeg kliendiks_saamise_aeg
        tunnus aktiivsus
    }
    TOOTAJA_ROLLI_OMAMINE {
        aeg rolli_algus
        aeg rolli_lopp
    }
    ROLL {
        tunnus kood
        nimetus nimetus
        kirjeldus vastutus
        kirjeldus naited_JUHATAJA_TREENER
    }
    SEISUND {
        tunnus kood
        nimetus nimetus
        kirjeldus tahendus
    }
    KLASSIFIKAATOR {
        tunnus kood
        nimetus nimetus
        kirjeldus tahendus
        tunnus aktiivsus
    }
